tests/negative/gold/global_self_ref_test.gold
tests/negative/global_self_ref_test.toit:5:16: error: Can't access global 'some_global' while initializing it
some_global := some_global + 1
               ^~~~~~~~~~~
tests/negative/global_self_ref_test.toit:7:29: error: Can't access global 'some_global3' while initializing it
some_global3 := just_block: some_global3
                            ^~~~~~~~~~~~
Compilation failed.
